2007-02-01  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200701.tex: edit after notes on kvm from maeda-san.

2007-01-20  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200701.tex: add aya resource.

2007-01-19  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200701.tex: work on finalization.

2007-01-11  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200701.tex (Device): add placeholders.

2007-01-05  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200701.tex: use nextpage to clear to desired location.

	* debianmeetingresume200702.tex: fix styles and create template.

	* debianmeetingresume200701.tex (Device): change style.

2006-12-29  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200701.tex: add article on kvm

2006-12-21  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200701.tex: new style page.

2006-12-15  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200612.tex: merge questions.

2006-12-11  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200612.tex: update comments about numbers.

2006-10-23  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200611-presentation.tex: create sheet for OSC session.

	* debianmeetingresume2006-fuyu.tex: initial

2006-10-20  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200610.tex: merge matsu

2006-10-16  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200610.tex: merge kmuto resource.

2006-09-17  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200610-presentation.tex: open up new month

2006-09-16  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200609.tex: fix typo

2006-09-15  Junichi Uekawa  <dancer@debian.org>

	* debianmeetingresume200609.tex: move over profiling doc to october.
	Prepare for release.
	add komuro resource.

	* debianmeetingresume200610.tex: move over profiling doc

2006-08-26  Junichi Uekawa  <dancer@debian.org>
