@@ -1,3 +1,7 @@
+2007-06-23  Junichi Uekawa  <dancer@debian.org>
+
+	* Makefile: add listtopic target to list topics
+
 2007-02-01  Junichi Uekawa  <dancer@debian.org>
 
 	* debianmeetingresume200701.tex: edit after notes on kvm from maeda-san.
